e2e/templates/proxy/squid_proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qa-squid
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qa-squid
  template:
    metadata:
      labels:
        app: qa-squid
    spec:
      containers:
        - name: squid
          image: ubuntu/squid:5.2-22.04_edge
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-proxy
              containerPort: 3128
          readinessProbe:
            tcpSocket:
              port: 3128
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3128
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: qa-squid
  namespace: default
spec:
  selector:
    app: qa-squid
  ports:
    - name: http-proxy
      port: 3128
      targetPort: 3128
  type: ClusterIP
